# automated-options-trader

./: .gitignore  README.md  pyproject.toml
infra/live/: root.hcl
infra/live/prod/us-east-1/close-options/: terragrunt.hcl
infra/live/prod/us-east-1/earnings-trader/: terragrunt.hcl
infra/modules/scheduled-python-lambda/: build_lambda_package.sh  main.tf  outputs.tf  variables.tf
reporting/: README.md  cli.py
requirements/lambda/: close-options.txt  earnings-trader.txt
scripts/: trading_cli.py
src/trading/: __init__.py  close_options.py  close_options_lambda_handler.py  earnings_trader.py  earnings_trader_lambda_handler.py  logging_utils.py  retry_utils.py  tradier_market.py
tests/: test_close_options.py
